--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,9 @@
 p{
     font-family: sans-serif;
+    border: 1px;
 }
 *{background-color:
      rgb(119, 187, 219);}
-    
+#title{
+    border: thick double white;
+}
